@@ -64,6 +64,7 @@ ot_add_source_file (TimeVaryingResult.cxx)
 ot_add_source_file (CovariatesResult.cxx)
 ot_add_source_file (GeneralizedPareto.cxx)
 ot_add_source_file (GeneralizedParetoFactory.cxx)
+ot_add_source_file (GeneralizedParetoValidation.cxx)
 ot_add_source_file (Geometric.cxx)
 ot_add_source_file (GeometricFactory.cxx)
 ot_add_source_file (GumbelCopula.cxx)
@@ -236,8 +237,9 @@ ot_install_header_file (DistributionFactoryLikelihoodResult.hxx)
 ot_install_header_file (ProfileLikelihoodResult.hxx)
 ot_install_header_file (TimeVaryingResult.hxx)
 ot_install_header_file (CovariatesResult.hxx)
-ot_install_header_file (GeneralizedParetoFactory.hxx)
 ot_install_header_file (GeneralizedPareto.hxx)
+ot_install_header_file (GeneralizedParetoFactory.hxx)
+ot_install_header_file (GeneralizedParetoValidation.hxx)
 ot_install_header_file (GeometricFactory.hxx)
 ot_install_header_file (Geometric.hxx)
 ot_install_header_file (GumbelCopulaFactory.hxx)
