@@ -1,0 +1,11 @@
+// SWIG file GeneralizedParetoValidation.i
+
+%{
+#include "openturns/GeneralizedParetoValidation.hxx"
+%}
+
+%include GeneralizedParetoValidation_doc.i
+
+%copyctor OT::GeneralizedParetoValidation;
+
+%include openturns/GeneralizedParetoValidation.hxx
