@@ -467,6 +467,7 @@ ot_pyinstallcheck_test (GeneralizedExtremeValueFactory_std IGNOREOUT)
 endif ()
 ot_pyinstallcheck_test (GeneralizedExtremeValueValidation_std IGNOREOUT)
 ot_pyinstallcheck_test (GeneralizedPareto_std)
+ot_pyinstallcheck_test (GeneralizedParetoValidation_std IGNOREOUT)
 ot_pyinstallcheck_test (GeneralizedParetoFactory_std IGNOREOUT)
 ot_pyinstallcheck_test (Geometric_std)
 ot_pyinstallcheck_test (GeometricFactory_std)
